[project]
name = "rpi-reporter-mqtt2ha-daemon"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.3",
    "os-release>=1.0.1",
    "paho-mqtt>=1.4.0",
    "requests>=2.28.2",
    "sdnotify>=0.3.1",
    "tzlocal>=2.1.0",
    "unidecode>=0.4.21",
    "wheel>=0.29.0",
]
